[gd_scene load_steps=21 format=3 uid="uid://c2lk7shvmrjj3"]

[ext_resource type="Script" uid="uid://b75uqq6sd8ro3" path="res://GameScenes/UpgradeChest/upgrade_chest.gd" id="1_ekny6"]
[ext_resource type="Texture2D" uid="uid://b7b2yswkjlhby" path="res://Sprites/Chest.png" id="1_ogamu"]
[ext_resource type="Material" uid="uid://bxrj30vylkpy5" path="res://Shaders/raycast_lighting.tres" id="2_778w8"]
[ext_resource type="Texture2D" uid="uid://nurf06um3rbe" path="res://Sprites/PointLight128x128.tres" id="3_1oo4p"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ekny6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ekny6"]
size = Vector2(12, 11)

[sub_resource type="Gradient" id="Gradient_778w8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.9098039, 0.75686276, 0.4392157, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a3if0"]
gradient = SubResource("Gradient_778w8")
width = 1
height = 1

[sub_resource type="Curve" id="Curve_1oo4p"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lae12"]
curve = SubResource("Curve_1oo4p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_778w8"]
particle_flag_disable_z = true
radial_velocity_min = 9.999977
radial_velocity_max = 19.999977
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_lae12")

[sub_resource type="Curve" id="Curve_a3if0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1jeo2"]
curve = SubResource("Curve_a3if0")

[sub_resource type="Curve" id="Curve_rplar"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4bfh1"]
curve = SubResource("Curve_rplar")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2384a"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
radial_velocity_min = -2.2351742e-05
radial_velocity_max = 99.99998
radial_velocity_curve = SubResource("CurveTexture_1jeo2")
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_4bfh1")
color = Color(0.99215686, 0.94509804, 0.64705884, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1oo4p"]
size = Vector2(12, 11)

[sub_resource type="Animation" id="Animation_lae12"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.1999999, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8000001, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_778w8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3if0"]
_data = {
&"Idle": SubResource("Animation_lae12"),
&"RESET": SubResource("Animation_778w8")
}

[node name="UpgradeChest" type="RigidBody2D"]
collision_layer = 0
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_ekny6")
gravity_scale = 0.5
script = ExtResource("1_ekny6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ekny6")

[node name="IdleParticles" type="GPUParticles2D" parent="."]
material = ExtResource("2_778w8")
amount = 16
texture = SubResource("GradientTexture2D_a3if0")
process_material = SubResource("ParticleProcessMaterial_778w8")

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
trail_enabled = true
trail_lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_2384a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = ExtResource("2_778w8")
texture = ExtResource("1_ogamu")
hframes = 15

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("3_1oo4p")
texture_scale = 0.5
height = 20.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_1oo4p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a3if0")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
